# pyllelic-web

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml  codeql.yml
pyllelic_web/: __main__.py  app.py  layout.py  process.py  utils.py
tests/: inputs.py  test_app.py  test_process.py  test_utils.py
